--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,7 +20,9 @@ dependencies:
   flutter:
     sdk: flutter
   provider: ^3.0.0
-  intl: ^0.15.7
+  intl: ^0.16.0
+  http: ^0.12.0+2
+  money2: ^1.0.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
